cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "-std=c++11")
project("Examples - Queues")

# add_library()

# set_target_properties(

#     PROPERTIES LINKER_LANGUAGE CXX
# )

# target_link_libraries()

# add_executable(main main.cpp)
# target_link_libraries(main )
